<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_vert_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bill's Grills"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_vert_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sun_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sun_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/mon_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mon_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline2"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline1"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/tue_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tue_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline3"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline2"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/wed_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wed_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline4"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline3"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/thu_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/thu_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline5"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline4"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/fri_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fri_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/detail_hori_guideline6"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline5"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <Button
        android:id="@+id/sat_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sat_btn"
        app:layout_constraintBottom_toTopOf="@+id/detail_vert_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_hori_guideline6"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_RecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_vert_guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.143" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.286" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.429" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.572" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.715" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_hori_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.858" />

</androidx.constraintlayout.widget.ConstraintLayout>